# camera-drones

./: .gitignore  README.md  planner_trajectory.txt
assignment_1/: ass_1_script.sh  documentation.txt  notes.txt
assignment_1/solution/: octomap.bt  report_ass_1.odt
assignment_2/: ass_2_script.sh  documentation.txt
assignment_3/: PathSimplifier.cpp  ass_3_script.sh  notes.txt
assignment_3/solution/: report.odt
assignment_4/: ass_4_script.sh
assignment_4/solution/: report.odt
catkin_ws/: planner_trajectory.txt  start_byobu_example.sh  start_byobu_example_msckf_vio.sh
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
catkin_ws/devel/include/msckf_vio/: CameraMeasurement.h  FeatureMeasurement.h  TrackingInfo.h
catkin_ws/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  camera_node
catkin_ws/devel/lib/octomap_server/: octomap_color_server_node  octomap_saver  octomap_server_multilayer  octomap_server_node  octomap_server_static  octomap_tracking_server_node
catkin_ws/devel/lib/pkgconfig/: assignment_1.pc  astra_camera.pc  msckf_vio.pc  octomap_server.pc  random_numbers.pc  roscpp_tutorials.pc  rospy_tutorials.pc  turtlesim.pc
catkin_ws/devel/lib/python2.7/dist-packages/astra_camera/cfg/: AstraConfig.py  UVCCameraConfig.py
catkin_ws/devel/lib/python2.7/dist-packages/msckf_vio/msg/: _CameraMeasurement.py  _FeatureMeasurement.py  _TrackingInfo.py
catkin_ws/devel/lib/roscpp_tutorials/: add_two_ints_client  add_two_ints_server  add_two_ints_server_class  anonymous_listener  babbler  cached_parameters  custom_callback_processing  hello_world  listener  listener_async_spin  listener_class  listener_multiple  listener_threaded_spin  listener_unreliable  listener_with_tracked_object  listener_with_userdata  node_handle_namespaces  notify_connect  parameters  talker  timers
catkin_ws/devel/lib/turtlesim/: draw_square  turtle_teleop_key  turtlesim_node
catkin_ws/devel/share/assignment_1/cmake/: assignment_1Config.cmake
catkin_ws/devel/share/astra_camera/cmake/: astra_cameraConfig.cmake
catkin_ws/devel/share/common-lisp/ros/msckf_vio/msg/: CameraMeasurement.lisp  TrackingInfo.lisp
catkin_ws/devel/share/gennodejs/ros/astra_camera/srv/: _index.js
catkin_ws/devel/share/gennodejs/ros/msckf_vio/msg/: CameraMeasurement.js  TrackingInfo.js  _index.js
catkin_ws/devel/share/gennodejs/ros/turtlesim/srv/: _index.js
catkin_ws/devel/share/msckf_vio/cmake/: msckf_vio-msg-paths.cmake  msckf_vioConfig.cmake
catkin_ws/devel/share/octomap_server/cmake/: octomap_serverConfig.cmake
catkin_ws/devel/share/random_numbers/cmake/: random_numbersConfig.cmake
catkin_ws/devel/share/roscpp_tutorials/cmake/: roscpp_tutorialsConfig.cmake
catkin_ws/devel/share/roseus/ros/astra_camera/: manifest.l
catkin_ws/devel/share/roseus/ros/msckf_vio/: manifest.l
catkin_ws/devel/share/roseus/ros/msckf_vio/msg/: CameraMeasurement.l  TrackingInfo.l
catkin_ws/devel/share/roseus/ros/roscpp_tutorials/: manifest.l
catkin_ws/devel/share/roseus/ros/rospy_tutorials/: manifest.l
catkin_ws/devel/share/roseus/ros/turtlesim/: manifest.l
catkin_ws/devel/share/rospy_tutorials/cmake/: rospy_tutorials-msg-paths.cmake  rospy_tutorialsConfig.cmake
catkin_ws/devel/share/turtlesim/cmake/: turtlesim-msg-paths.cmake  turtlesimConfig.cmake
catkin_ws/logs/msckf_vio/: build.make.000.log.stderr
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/assignment_1/scripts/: my_first_node.py
catkin_ws/src/dla2_path_planner/: README.md
catkin_ws/src/dla2_path_planner/include/dla2_path_planner/: dla2_path_planner_ros.h  helper_functions.h
catkin_ws/src/dla2_path_planner/src/dla2_path_planner/: dla2_path_planner_ros.cpp
catkin_ws/src/dla3_trajectory_sampler/src/: dla3_trajectory_sampler.cc  dla3_trajectory_sampler_node.cc
catkin_ws/src/dynamicEDT3D/: CMakeLists.txt  package.xml
catkin_ws/src/msckf_vio/launch/: rosbag_play.launch  rqt_multiplot.launch  rviz.launch
catkin_ws/src/msckf_vio/rviz/: rqt_multiplot_msckf_vio.xml  rqt_multiplot_msckf_vio_v2.xml  rviz_fla_config.rviz
catkin_ws/src/octomap_path_planner/: CMakeLists.txt  CMakeLists_OLD.txt  README.md  package.xml  planner_trajectory.txt
catkin_ws/src/octomap_path_planner/include/octomap_path_planner/: octomap_helper_functions.h  octomap_path_planner_ros.h
catkin_ws/src/octomap_path_planner/include/trajectory_visualization/: trajectory_visualization.h
catkin_ws/src/octomap_path_planner/launch/: octomap_mapping_a2.launch
catkin_ws/src/octomap_path_planner/src/: main_ros_node_octomap.cpp
catkin_ws/src/octomap_path_planner/src/octomap_path_planner/: octomap_path_planner_ros.cpp
catkin_ws/src/octomap_path_planner/src/trajectory_visualization/: trajectory_visualization.cpp
catkin_ws/src/ros_tutorials/roscpp_tutorials/: CMakeLists.txt
catkin_ws/src/ros_tutorials/roscpp_tutorials/talker/: hello_world.cpp
catkin_ws/src/trajectory_planner/: CMakeLists.txt  CMakeLists_safe.txt  package.xml
catkin_ws/src/trajectory_planner/include/: trajectory_planner.h
catkin_ws/src/trajectory_planner/launch/: trajectory_planner.launch
catkin_ws/src/trajectory_planner/src/trajectory_planner/: trajectory_planner.cpp  trajectory_planner_ros.cpp
catkin_ws/src/trajectory_planner/src/trajectory_visualization/: trajectory_visualization.cpp
