<?xml version="1.0"?>
<package>
  <name>octomap_path_planner</name>
  <version>0.0.0</version>
  <description>The octomap_path_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="student@todo.todo">student</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>ICG_TUGraz</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamicEDT3D</build_depend>
  <build_depend>octomap</build_depend>  
  <build_depend>ompl</build_depend>

  <build_depend>eigen_catkin</build_depend>
  <build_depend>mav_trajectory_generation</build_depend>
  <build_depend>mav_trajectory_generation_ros</build_depend>
  <build_depend>mav_visualization</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>	

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>mav_planning_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>octomap</run_depend>  

  <!--
  <export>
    <nodelet plugin="${prefix}/dla2_path_planner_ros_nodelet.xml"/>
  </export>
  -->
</package>
